--- a/src/main/resources/templates/settlement/cart.html
+++ b/src/main/resources/templates/settlement/cart.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>弁ぷら　｜　カート</title>
 	<link th:href="@{/css/cart.css}" rel="stylesheet">
+	<script th:src="@{/js/cart.js}"></script>
 </head>
 
 <body>
