--- a/src/main/resources/templates/settlement/cart.html
+++ b/src/main/resources/templates/settlement/cart.html
@@ -4,18 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>弁ぷら　｜　カート</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=RocknRoll+One&display=swap" rel="stylesheet">
 	<link th:href="@{/css/cart.css}" rel="stylesheet">
-	<script th:src="@{/js/cart.js}"></script>
+	<script th:src="@{/ajs/cart.js}"></script>
 </head>
 
 <body>
-	<header id="site-header">
-		<div class="container">
-			<h1>Shopping cart <span>[</span> <em><a href="https://codepen.io/tag/rodeo-007" target="_blank">CodePen
-						Challange</a></em> <span class="last-span is-open">]</span></h1>
-		</div>
-	</header>
-
+	<div class="content-title">
+		<p><span>弁ぷら</span>カート</p>
+	</div>
+	
 	<div class="container">
 
 		<section id="cart">
@@ -24,108 +24,34 @@
 					<a class="remove">
 						<img src="http://www.astudio.si/preview/blockedwp/wp-content/uploads/2012/08/1.jpg" alt="">
 
-						<h3>Remove product</h3>
+						<h3>削除</h3>
 					</a>
 				</header>
 
 				<div class="content">
 
-					<h1>Lorem ipsum</h1>
-
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam quis perspiciatis ea ad
-					omnis provident laborum dolore in atque.
-
-					<div title="You have selected this product to be shipped in the color yellow." style="top: 0"
-						class="color yellow"></div>
-					<div style="top: 43px" class="type small">XXL</div>
+					<h1>仮</h1>
+					<p>受け取り</p>
+					<p class="time">日時：8/25 12：00</p>
+					
 				</div>
 
 				<footer class="content">
-					<span class="qt-minus">-</span>
-					<span class="qt">2</span>
-					<span class="qt-plus">+</span>
+					
+					<select class="qt">
+								<option value="1">1</option>
+								<option value="2">2</option>
+								<option value="3">3</option>
+								<option value="4">4</option>
+								<option value="5">5</option>
+							</select>
 
 					<h2 class="full-price">
-						29.98€
+						1300円
 					</h2>
 
-					<h2 class="price">
-						14.99€
-					</h2>
-				</footer>
-			</article>
-
-			<article class="product">
-				<header>
-					<a class="remove">
-						<img src="http://www.astudio.si/preview/blockedwp/wp-content/uploads/2012/08/3.jpg" alt="">
-
-						<h3>Remove product</h3>
-					</a>
-				</header>
-
-				<div class="content">
-
-					<h1>Lorem ipsum dolor</h1>
-
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam quis perspiciatis ea ad
-					omnis provident laborum dolore in atque.
-
-					<div title="You have selected this product to be shipped in the color red." style="top: 0"
-						class="color red"></div>
-					<div title="You have selected this product to be shipped sized Small." style="top: 43px"
-						class="type small">Small</div>
-				</div>
-
-				<footer class="content">
-
-					<span class="qt-minus">-</span>
-					<span class="qt">1</span>
-					<span class="qt-plus">+</span>
-
-					<h2 class="full-price">
-						79.99€
-					</h2>
-
-					<h2 class="price">
-						79.99€
-					</h2>
-				</footer>
-			</article>
-
-			<article class="product">
-				<header>
-					<a class="remove">
-						<img src="http://www.astudio.si/preview/blockedwp/wp-content/uploads/2012/08/5.jpg" alt="">
-
-						<h3>Remove product</h3>
-					</a>
-				</header>
-
-				<div class="content">
-
-					<h1>Lorem ipsum dolor ipsdu</h1>
-
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, numquam quis perspiciatis ea ad
-					omnis provident laborum dolore in atque.
-
-					<div title="You have selected this product to be shipped in the color blue." style="top: 0"
-						class="color blue"></div>
-					<div style="top: 43px" class="type small">Large</div>
-				</div>
-
-				<footer class="content">
-
-					<span class="qt-minus">-</span>
-					<span class="qt">3</span>
-					<span class="qt-plus">+</span>
-
-					<h2 class="full-price">
-						53.99€
-					</h2>
-
-					<h2 class="price">
-						17.99€
+					<h2 class="price" >
+						650円
 					</h2>
 				</footer>
 			</article>
@@ -138,14 +64,14 @@
 		<div class="container clearfix">
 
 			<div class="left">
-				<h2 class="subtotal">Subtotal: <span>163.96</span>€</h2>
-				<h3 class="tax">Taxes (5%): <span>8.2</span>€</h3>
-				<h3 class="shipping">Shipping: <span>5.00</span>€</h3>
+				<h2 class="subtotal">合計(抜税): <span>163.96</span>円</h2>
+				<h3 class="tax">消費税(5%): <span>8.2</span>円</h3>
+				
 			</div>
 
 			<div class="right">
-				<h1 class="total">Total: <span>177.16</span>€</h1>
-				<a class="btn">Checkout</a>
+				<h1 class="total">合計(税込): <span>177.16</span>円</h1>
+				<a class="btn">決済</a>
 			</div>
 
 		</div>
