--- a/src/main/resources/static/css/calender.css
+++ b/src/main/resources/static/css/calender.css
@@ -140,6 +140,6 @@ h1 {
 .order-history thead th {
     position: sticky;
     top: 0;
-    background-color: #fff;
+    background-color: #f2f2f2;
     z-index: 1;
 }
