--- a/src/main/resources/templates/calender.html
+++ b/src/main/resources/templates/calender.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>マイページ/カレンダー</title>
+	<title>★本番★マイページ/カレンダー</title>
 	<link th:href="@{/css/calender.css}" rel="stylesheet">
 	<script th:src="@{/js/calender.js}"></script>
 </head>
@@ -14,7 +14,7 @@
 	<div class="calendar-container">
 
 		<!-- カレンダーのタイトル -->
-		<h1>マイページ/カレンダー</h1>
+		<h1>★本番★マイページ/カレンダー</h1>
 
 		<!-- ナビゲーションボタン（先月・来月に切り替え） -->
 		<div class="navigation">
